# GDriveFileManager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/googledrivefilemanager/: __init__.py  googledrivefilemanager.py
src/googledrivefilemanager/config/: config.py
src/googledrivefilemanager/grequest/: __init__.py  grequest.py
tests/: config.yaml  tests.py
tests/tester/: __init__.py  basetester.py  createtester.py  deletetester.py  downloadtester.py  getfilestester.py  getfiletester.py  searchtester.py  updatetester.py
